<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:background="#0087be">

    <ImageView
            android:id="@+id/app_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/icon"
            android:layout_marginTop="@dimen/margin_medium"/>

    <TextView
            android:id="@+id/about_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginTop="17dp"
            android:layout_marginBottom="@dimen/margin_small"
            android:gravity = "center_horizontal"
            android:textSize="28sp"
            android:textColor="@color/white"/>

    <TextView
            android:id="@+id/about_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_summary"
            android:layout_marginBottom="@dimen/margin_small"
            android:gravity = "center_horizontal"
            android:textSize="14sp"
            android:textColor="@color/grey_lighten_20"/>

    <TextView
            android:id="@+id/about_version"
            android:text="@string/app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity = "center_horizontal"
            android:textSize="14sp"
            android:textColor="@color/grey_lighten_20"/>

    <TextView
            android:id="@+id/about_author"
            android:text="@string/app_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity = "center_horizontal"
            android:textSize="14sp"
            android:textColor="@color/grey_lighten_20"
            android:layout_marginTop="17dp"/>

    <TextView
            android:id="@+id/about_copyright"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity = "center_horizontal"
            android:textSize="14sp"
            android:textColor="@color/grey_lighten_20"
            android:layout_marginTop="@dimen/margin_small"/>

    <TextView
            android:id="@+id/about_licence"
            android:text="@string/app_licence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity = "center_horizontal"
            android:textSize="14sp"
            android:textColor="@color/grey_lighten_20"
            android:layout_marginTop="@dimen/margin_small"/>

</LinearLayout>